--- a/html/index.html
+++ b/html/index.html
@@ -2,10 +2,22 @@
 <html>
     <head>
         <title>Jeb's Portfolio</title>
+        <style>
+            img {
+                width: 100px;
+                border-radius: 50px;
+                float: left;
+                margin-right: 10px;
+            }
+        
+            .welcome {
+                font-weight: bold;
+            }
+        </style>
     </head>
     <body>
         <img src="../images/profile.jpg" alt="">
-        <p>Welcome to my web portfolio!</p>
+        <p class="welcome">Welcome to my web portfolio!</p>
         <p>My name's Jeb Watson, I'm a professional software engineer with nearly 10 years of experience.</p>
     </body>
 </html>
