redo the page with the standard boilerplate

--- a/html/index.html
+++ b/html/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="HTML, CSS">
+    <meta name="description" content="Jeb Watson's portfolio">
     <title>Jeb's Portfolio</title>
-    <style>
-      img {
-        width: 100px;
-        border-radius: 50px;
-        float: left;
-        margin-right: 10px;
-      }
 
-      .welcome {
-        font-weight: bold;
-      }
+    <style>
+        img {
+            width: 100px;
+            border-radius: 50px;
+            margin-right: 10px;
+            float: left;
+        }
+
+        .welcome {
+            font-weight: bold;
+        }
     </style>
-  </head>
-  <body>
-    <img src="../images/profile.jpg" alt="" />
+</head>
+<body>
+    <img src="../images/profile.jpg" alt="Uh oh, Where's Jeb?">
     <p class="welcome">Welcome to my web portfolio!</p>
-    <p>
-      My name's Jeb Watson, I'm a professional software engineer with nearly 10
-      years of experience.
-    </p>
-  </body>
+    <p>My name is Jeb Watson - I am a professional software engineer with nearly 10 years of experience building cool things with code.</p>
+</body>
 </html>
