--- a/html/index.html
+++ b/html/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="HTML, CSS">
-    <meta name="description" content="Jeb Watson's portfolio">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="HTML, CSS" />
+    <meta name="description" content="Jeb Watson's portfolio" />
     <title>Jeb's Portfolio</title>
 
     <style>
-        img {
-            width: 100px;
-            border-radius: 50px;
-            margin-right: 10px;
-            float: left;
-        }
+      img {
+        width: 100px;
+        border-radius: 50px;
+        margin-right: 10px;
+        float: left;
+      }
 
-        .welcome {
-            font-weight: bold;
-        }
+      .welcome {
+        font-weight: bold;
+      }
     </style>
-</head>
-<body>
-    <img src="../images/profile.jpg" alt="Uh oh, Where's Jeb?">
-    <p class="welcome">Welcome to my web portfolio!</p>
-    <p>My name is Jeb Watson - I am a professional software engineer with nearly 10 years of experience building cool things with code.</p>
-</body>
+  </head>
+  <body>
+    <img src="../images/profile.jpg" alt="Uh oh, Where's Jeb?" />
+    <h1>Jeb Watson's Software Portfolio</h1>
+    <h2>Welcome to my web portfolio!</h2>
+    <a href="about.html">About Me</a>
+    <a href="about.html#section-buried-treasure">Buried Treasure!</a>
+    <a href="https://google.com" target="_blank">Google</a>
+    <a href="mailto:jeb.watson@gmail.com">Email Me!</a>
+  </body>
 </html>
