Much nicer layout

--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
           <h1 id="welcome">Jeb Watson's Software Portfolio</h1>
           <h2 id="welcome">Welcome to my web portfolio!</h2>
         </div>
-        <div id="fixed-item-container-navbar">
+        <div>
           <a id="text-navbar" href="about.html">About Me</a>
           <a id="text-navbar" href="about.html#section-buried-treasure"
             >Buried Treasure</a
