Start of the content section

--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,9 @@
           bring your ideas to life.
         </p>
       </div>
+      <div id="container-content">
+        <h2 id="text-what-im-doing" class="font-base">What I'm doing now</h2>
+      </div>
     </div>
-    <div id="container-content"></div>
   </body>
 </html>
