Fill out the home page with what im doing now section

--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="HTML, CSS" />
-    <meta name="description" content="Jeb Watson's portfolio" />
-    <title>Jeb's Portfolio</title>
+    <meta name="description" content="Jeb Watson" />
+    <title>Jeb Watson</title>
 
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/home.css" />
@@ -20,38 +20,102 @@
       />
     </div>
     <div id="container-page">
-      <div id="flex-container-menu">
-        <div id="flex-item-container-title">
+      <div id="container-navbar">
+        <div id="container-title">
           <a id="text-title" class="font-base" href="index.html">Jeb Watson</a>
         </div>
         <div>
-          <a class="font-base text-navbar" href="mailto:jeb.watson@gmail.com"
-            >Contact Me</a
-          >
-          <a
-            class="font-base text-navbar"
-            href="about.html#section-buried-treasure"
-            >Portfolio</a
-          >
-          <a
-            class="font-base text-navbar"
-            href="https://google.com"
-            target="_blank"
-            >Blog</a
-          >
-          <a class="font-base text-navbar" href="index.html">Start Here</a>
+          <nav>
+            <ul class="list-navbar">
+              <li class="item-navbar">
+                <a
+                  class="font-base text-navbar"
+                  href="mailto:jeb.watson@gmail.com"
+                  >Contact Me</a
+                >
+              </li>
+              <li class="item-navbar">
+                <a
+                  class="font-base text-navbar"
+                  href="https://github.com/jebwatson"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="item-navbar">
+                <a
+                  class="font-base text-navbar"
+                  href="https://google.com"
+                  target="_blank"
+                  >Blog</a
+                >
+              </li>
+              <li class="item-navbar">
+                <a class="font-base text-navbar" href="index.html"
+                  >Start Here</a
+                >
+              </li>
+            </ul>
+          </nav>
         </div>
       </div>
       <div id="container-welcome">
         <h1 id="text-hello-message" class="font-base">Hi, I'm Jeb</h1>
-        <p id="text-about-me" class="font-base">
+        <p class="font-base text-about-me">
           I'm a professional software engineer, designer, seeker of knowledge,
-          Jeep fanatic, disc golfer, & father of cats. I'd love to help you
-          bring your ideas to life.
+          Jeep fanatic, disc golfer, & father of cats.
+        </p>
+        <p class="font-base text-about-me">
+          I'd love to help bring your ideas to life.
         </p>
       </div>
       <div id="container-content">
-        <h2 id="text-what-im-doing" class="font-base">What I'm doing now</h2>
+        <h2 id="text-what-im-doing-title" class="font-base">
+          What I'm doing now
+        </h2>
+        <div id="container-what-im-doing-content">
+          <p class="font-base text-what-im-doing text-what-im-doing-update">
+            Updated Apr 2nd, 2021 Fri
+          </p>
+          <p class="font-base text-what-im-doing text-what-im-doing-entry">
+            <strong>Creating</strong> cool stuff for the future of defense at
+            <a class="link-content" href="https://saic.com" target="_blank"
+              >SAIC</a
+            >, where I work as a fullstack, .NET/Xamarin Forms software engineer
+            and part-time product owner.
+          </p>
+          <p class="font-base text-what-im-doing text-what-im-doing-entry">
+            <strong>Exploring</strong> new business ideas, building out
+            prototypes and MVPs, and developing my personal brand and
+            professional relationships.
+          </p>
+          <p class="font-base text-what-im-doing text-what-im-doing-entry">
+            <strong>Extending</strong> my smarthome, including writing custom
+            control services for my hub, installing an ever increasing amount of
+            IoT devices, and tweaking how things work together for a seamless
+            smarthome experience.
+          </p>
+          <p class="font-base text-what-im-doing text-what-im-doing-entry">
+            <strong>Restoring</strong> my 1998 Jeep Wrangler TJ Sport (Chonk) to
+            it's former (and future) glory. The
+            <a
+              class="link-content"
+              href="https://trello.com/b/9eODLzOa/chonk"
+              target="_blank"
+              >build</a
+            >
+            so far.
+          </p>
+          <p class="font-base text-what-im-doing text-what-im-doing-entry">
+            <strong>Improving</strong> my
+            <a
+              class="link-content"
+              href="https://www.youtube.com/user/JomezProductions"
+              target="_blank"
+              >disc golf</a
+            >
+            career through exercise, practice, and tournament play.
+          </p>
+        </div>
       </div>
     </div>
   </body>
