add in the debug css

--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/home.css" />
+    <link rel="stylesheet" href="../css/debug-off.css" />
   </head>
   <body>
     <div id="container-title-background">
